--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,11 @@
+@use "./styles/partials/typography" as *;
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
 
 body {
-  /* font-family: $font-stack; */
+  font-family: $font-stack;
   padding: 0;
   margin: 0;
 }
