--- a/src/App.scss
+++ b/src/App.scss
@@ -9,4 +9,14 @@
     border: 2px solid;
     border-radius: 10px;
   }
+  
+  &__placeholder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 2rem;
+    border: 2px solid;
+    border-radius: 10px;
+  }
 }
