--- a/src/component/TypedText/TypedText.scss
+++ b/src/component/TypedText/TypedText.scss
@@ -5,7 +5,7 @@
     align-items: center;
     width: 300px;
     height: 250px;
-    padding: 16px;
+    padding: 8px 16px;
     border: 2px solid;
     border-radius: 10px;
   }
@@ -25,7 +25,7 @@
     border-radius: 10px;
     margin-bottom: .5rem;
   }
-
+  
   &__placeholder {
     display: flex;
     align-items: center;
@@ -34,5 +34,11 @@
     height: 4rem;
     border: 2px solid;
     border-radius: 10px;
+    margin-bottom: .5rem;
+  }
+  
+  &__box {
+    margin-bottom: .5rem;
+    
   }
 }
