--- a/src/component/TypedText/TypedText.scss
+++ b/src/component/TypedText/TypedText.scss
@@ -3,9 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
+    width: 284px;
     height: 250px;
-    padding: 8px 16px;
+    padding: 8px;
     border: 2px solid;
     border-radius: 10px;
   }
