--- a/src/component/TypedText/TypedText.scss
+++ b/src/component/TypedText/TypedText.scss
@@ -11,11 +11,24 @@
   }
 
   &__buttons {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: .5rem;
     width: 100%;
   }
 
   &__upgrade {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 2rem;
+    border: 2px solid;
+    border-radius: 10px;
+    margin-bottom: .5rem;
+    cursor: pointer;
+  }
+  &__stats {
     display: flex;
     align-items: center;
     justify-content: center;
