--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,14 @@ h1, h2, h3, h4, p, span, li, ul, a {
   padding: 0;
 }
 
+h1 {
+  font-size: 1.5rem;
+}
+
+p, span {
+  font-size: 1rem;
+}
+
 li {
   list-style: none;
 }
