Add some animation to show interaction with buttons

--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -8,3 +8,19 @@ $font-stack: 'Syne Mono';
     url(../../assets/fonts/SyneMono-Regular.ttf) format("truetype");
   font-weight: 400;
 }
+
+h1 {
+  font-size: 1.5rem;
+}
+
+a {
+  font-size: 1rem;
+}
+
+p, span {
+  font-size: 1rem;
+}
+
+button {
+  font-size: 1rem;
+}
