--- a/src/component/TypedText/TypedText.scss
+++ b/src/component/TypedText/TypedText.scss
@@ -16,29 +16,6 @@
     gap: .5rem;
     width: 100%;
   }
-
-  &__upgrade {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 2rem;
-    border: 2px solid;
-    border-radius: 10px;
-    margin-bottom: .5rem;
-    cursor: pointer;
-  }
-  &__stats {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 2rem;
-    border: 2px solid;
-    border-radius: 10px;
-    margin-bottom: .5rem;
-    cursor: pointer;
-  }
   
   &__box {
     height: 5rem;
@@ -77,6 +54,31 @@
   &__spacer {
     grid-area: spacer;
     width: 50%;
+  }
+}
+
+.link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 2rem;
+  border: 2px solid;
+  border-radius: 10px;
+  margin-bottom: .5rem;
+  cursor: pointer;
+
+  &:visited {
+    color: black;
+  }
+
+  &:active {
+    transform: scale(.95);
+  }
+
+  &:hover {
+    font-weight: 600;
+    border: 3px solid;
   }
 }
 
