Changed the multiplier on upgrade 2 from 4 to 2.75

--- a/src/pages/UpgradePage/UpgradePage.scss
+++ b/src/pages/UpgradePage/UpgradePage.scss
@@ -33,4 +33,8 @@
     display: flex;
     justify-content: space-between;
   }
+  &__bought { 
+    font-weight: 600;
+    margin: 0 1rem 0 auto
+  }
 }
